2002-11-27  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h:
	* src/ast.cpp (Clone): Remove covariance, for the sake of our
	friends at Microsoft who don't believe in standards.

2002-11-27  Eric Blake  <ebb9@email.byu.edu>

	* doc/jikes.1 (+a): New option to omit asserts.
	(-target, -source):
	* src/jikes.cpp: Improve documentation to match new behavior.
	* src/body (ProcessAssertStatement):
	* src/bytecode.cpp (CompileClass, EmitAssertStatement),
	(GenerateAssertVariableInitializer): Update to allow forward
	compatibility to old VMs with proper command line options.
	* src/error.h:
	* src/error.cpp (ASSERT_UNSUPPORTED_IN_TARGET): New error.
	* src/jikesapi.h (SDK1_4_2, SDK1_5): New Java release levels.
	* src/option.cpp:
	* src/option.h: Add long names for sevaral +options, improve
	handling of +a, -source, -target.
	* src/semantic.h: Fix typo.

2002-11-26  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h (Ast): Remove unnecessary destructors (Ast nodes are
	allocated from a storage pool; hence reclaiming the pool reclaims
	all the nodes at once rather than using destructors).
	* src/ast.cpp:
	* src/unparse.cpp: Remove pure virtual method implementations.
	* src/bytecode.h (CompileConstructor, GenerateClassAccessMethod):
	Remove dead parameters.
	* src/bytecode.cpp (EmitSwitchStatement): Remove dead comment.
	* src/double.h (operator++, operator--):
	* src/long.cpp (operator++, operator--):
	* src/scanner.cpp (ScanKeyword0):
	* src/unzip.cpp (UncompressFile*):
	* src/op.h (OpLine):
	* src/op.cpp:
	* src/class.h (Print, Describe): Remove dead parameters.
	* src/definite.cpp (DefiniteDefault*): Move to...
	* src/semantic: Here.
	(DefiniteDefaultStatement): Rename from DefiniteEmptyStatement.
	(DefiniteBlockStack): Remove dead parameter.

2002-11-26  Eric Blake  <ebb9@email.byu.edu>

	* doc/jikes.1 (-Xswitchcheck): Document new option added for javac
	compatibility - patch 374.
	* src/ast.h (AstSwitchLabel): Consolidate AstCaseLabel and
	AstDefaultLabel into one class.